generating output for intermediary steps if you want

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,9 @@
     "# f.to_netcdf('../data/2013.11.18_regrid.nc')\n",
     "\n",
     "f = xr.open_dataset('../data/2013.11.18_regrid.nc')\n",
-    "low_file = pd.read_csv(\"../data/PL_2013-11-18-0600_20-4km_stormtrack1.csv\")"
+    "low_file = pd.read_csv(\"../data/PL_2013-11-18-0600_20-4km_stormtrack1.csv\")\n",
+    "\n",
+    "dump = xr.open_dataset('../data/2013.11.18_calc_data_dump.nc')"
    ]
   },
   {
@@ -1605,6 +1607,174 @@
    ],
    "source": [
     "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfile = xr.Dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(f.U)\n",
+    "\n",
+    "z = np.zeros(np.shape(f.U))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = xr.DataArray(z, dims=[\"XTIME\", \"lev\", \"lat\", \"lon\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfile['AHHH'] = arr\n",
+    "outfile['XTIME'] = f.XTIME\n",
+    "outfile['lev'] = f.lev\n",
+    "outfile['lat'] = f.lat\n",
+    "outfile['lon'] = f.lon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:  (XTIME: 67, lat: 270, lev: 10, lon: 370)\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "  * lev      (lev) float64 880.0 865.0 850.0 835.0 ... 525.0 500.0 475.0 450.0\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
+       "Data variables:\n",
+       "    AHHH     (XTIME, lev, lat, lon) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfile.AHHH.attrs={'help': 'text'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'AHHH' (XTIME: 67, lev: 10, lat: 270, lon: 370)>\n",
+       "array([[[[0., ..., 0.],\n",
+       "         ...,\n",
+       "         [0., ..., 0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0., ..., 0.],\n",
+       "         ...,\n",
+       "         [0., ..., 0.]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[0., ..., 0.],\n",
+       "         ...,\n",
+       "         [0., ..., 0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0., ..., 0.],\n",
+       "         ...,\n",
+       "         [0., ..., 0.]]]])\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "  * lev      (lev) float64 880.0 865.0 850.0 835.0 ... 525.0 500.0 475.0 450.0\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
+       "Attributes:\n",
+       "    help:     text"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outfile.AHHH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:                      (XTIME: 67, lat: 270, lev: 3, lon: 370)\n",
+       "Coordinates:\n",
+       "  * XTIME                        (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
+       "  * lat                          (lat) float64 66.0 66.05 66.1 ... 79.4 79.45\n",
+       "  * lon                          (lon) float64 3.0 3.15 3.3 ... 58.05 58.2 58.35\n",
+       "  * lev                          (lev) float64 880.0 850.0 820.0\n",
+       "Data variables:\n",
+       "    Q1                           (XTIME, lev, lat, lon) float64 ...\n",
+       "    Q2                           (XTIME, lev, lat, lon) float64 ...\n",
+       "    DIVQ                         (XTIME, lev, lat, lon) float64 ...\n",
+       "    LATENT_PHASE_CHANGE          (XTIME, lev, lat, lon) float64 ...\n",
+       "    DELSQ_LATENT_PHASE_CHANGE    (XTIME, lev, lat, lon) float64 ...\n",
+       "    W_FRIC                       (XTIME, lat, lon) float32 ...\n",
+       "    OMG_FRIC                     (XTIME, lat, lon) float32 ...\n",
+       "    OMG_TOP                      (XTIME, lat, lon) float64 ...\n",
+       "    HEAT_FROM_LATENT_FLUX        (XTIME, lat, lon) float64 ...\n",
+       "    HEAT_FROM_SENS_FLUX          (XTIME, lat, lon) float64 ...\n",
+       "    DELSQ_HEAT_FROM_LATENT_FLUX  (XTIME, lat, lon) float64 ...\n",
+       "    DELSQ_HEAT_FROM_SENS_FLUX    (XTIME, lat, lon) float64 ..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dump"
    ]
   },
   {
